--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
       // a['abc'] = 2
       // a.obj['abc'] = 2
       console.log(a)
+
+      var ARR = []
+      ARR['a'] = {}
+      var arr_1 = ARR['a']
+      arr_1.a = 1
+      arr_1.b = 2
+      console.log('ARR-', arr_1, ARR)
     </script>
   </body>
 </html>
