--- a/618.html
+++ b/618.html
@@ -100,7 +100,7 @@
         <!-- <a href="tbopen://">taobao2</a> -->
       </div>
     </div>
-    <script src="./js/cusCopy.min.1.0.js"></script>
+    <script src="./js/cusCopy.source.js"></script>
     <script>
       function cusCopySucc() {
         var jsBtn = document.getElementById('jsBtn')
@@ -115,6 +115,8 @@
           window.location.href = 'tbopen://'
         }, 200)
       }
+
+      createDOMBindEvent('-1-2-3-')
     </script>
   </body>
 </html>
