--- a/iphonex.html
+++ b/iphonex.html
@@ -3,21 +3,27 @@
 
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no, viewport-fit=cover" /> -->
-  <meta name="viewport" content="initial-scale=1, viewport-fit=contain">
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+  <!-- <meta name="viewport" content="initial-scale=1, viewport-fit=contain"> -->
   <title>test iphonex</title>
   <style>
+    *{
+      /* box-sizing: border-box; */
+    }
     html,
     body {
-      height: 100%;
+      /* height: 100%; */
     }
 
     body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
-      /* padding-bottom: constant(safe-area-inset-bottom); */
+      padding-top: env(safe-area-inset-top);
+      /* overflow: hidden; */
+      padding-bottom: env(safe-area-inset-bottom);
+      /* padding-bottom: 10px; */
     }
 
     .header,
@@ -32,29 +38,45 @@
       top: 0;
       height: 44px;
       background-color: #f90;
-      padding-top: constant(safe-area-inset-top);
+      /* padding-top: constant(safe-area-inset-top); */
+      border-top: env(safe-area-inset-top) solid #000;
+      /* border-top: 15px solid #000; */
     }
 
+    /* .header::before {
+      content: '';
+      position: fixed;
+      z-index: 9998;
+      top: 0px;
+      left: 0;
+      width: 100%;
+      height: 20px;
+      background: #000;
+    } */
+
     .footer {
+      /* position: relative; */
       bottom: 0;
       /* bottom: constant(safe-area-inset-bottom); */
+      /* bottom: env(safe-area-inset-bottom); */
       height: 60px;
       background-color: #f90;
       border: 1px solid brown;
       /* margin-bottom: constant(safe-area-inset-bottom); */
-      padding-bottom: constant(safe-area-inset-bottom);
+      /* padding-bottom: env(safe-area-inset-bottom); */
+      border-bottom: env(safe-area-inset-bottom) solid #eee;
       /* height: calc(60px + constant(safe-area-inset-bottom)); */
     }
 
-    /* .footer::after{
-        content: '';
-        position: fixed;
-        z-index: 9998;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 34px;
-        background: blue;
+    /* .footer::after {
+      content: '';
+      position: fixed;
+      z-index: 9998;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 34px;
+      background: #999;
     } */
 
     /* @supports (bottom: constant(safe-area-inset-bottom)) {
@@ -65,7 +87,9 @@
 
     .main-wrp {
       padding: 44px 0 60px 0;
-      height: 1000px;
+      /* padding-top: env(safe-area-inset-top); */
+      /* padding-bottom: env(safe-area-inset-bottom); */
+      /* height: 600px; */
     }
   </style>
 </head>
@@ -76,9 +100,47 @@
   <!-- content -->
   <div class="main-wrp">
     content
+    <div id="text1"></div>
+    <hr>
+    <div id="text2"></div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur reiciendis nihil ex quam architecto doloremque
+    voluptates, necessitatibus, autem, pariatur cupiditate quibusdam illo voluptatibus exercitationem ipsa quasi eligendi
+    culpa voluptate debitis!
+    --------
   </div>
 
   <div class="footer">footer</div>
+  <script>
+    var text_1 = document.getElementById('text1');
+    var text_2 = document.getElementById('text2');
+
+    text_1.innerText = navigator.appVersion;
+    text_2.innerText = navigator.userAgent;
+  </script>
 </body>
 
 </html>
