笔试题相关

--- a/srcset_sizes.html
+++ b/srcset_sizes.html
@@ -32,8 +32,13 @@
 
 <body>
   <img src="./img/mm-width-128px.jpg"
-    srcset="./img/mm-width-128px.jpg 128w, ./img/mm-width-256px.jpg 256w, ./img/mm-width-512px.jpg 512w" 
-    sizes="100px">
+    srcset="./img/mm-width-128px.jpg 128w, ./img/mm-width-256px.jpg 256w, ./img/mm-width-512px.jpg 512w">
+  <hr>
+  <img src="./img/mm-width-128px.jpg"
+    srcset="./img/mm-width-128px.jpg 128w, ./img/mm-width-256px.jpg 256w, ./img/mm-width-512px.jpg 512w" sizes="100px">
+  <hr>
+  <img src="./img/mm-width-128px.jpg"
+    srcset="./img/mm-width-128px.jpg 128w, ./img/mm-width-256px.jpg 256w, ./img/mm-width-512px.jpg 512w" sizes="200px">
   <!-- <img src="./img/mm-width-128px.jpg"
     srcset="./img/mm-width-128px.jpg 1x, ./img/mm-width-256px.jpg 2x, ./img/mm-width-512px.jpg 3x"
     sizes="200px"
