--- a/m-test/call_apply_bind.html
+++ b/m-test/call_apply_bind.html
@@ -35,6 +35,7 @@
       delete context.fn
       return result
     }
+
     // cus apply
     // *因为传入的直接就是 array ，所以不用通过 arguments 获取参数
     // *循环直接从传入的 array 的 0 开始就好，不能在从 1 开始
@@ -58,6 +59,37 @@
       return result
     }
 
+    // cus bind
+    Function.prototype.bind2 = function (context) {
+      if (typeof this !== "function") {
+        throw new Error("Function.prototype.bind - what is trying to be bound is not callable");
+      }
+
+      var self = this
+      // 第一层参数
+      var args1 = Array.prototype.slice.call(arguments, 1)
+      console.log('args1-', args1)
+
+      var bind_fn = function () {
+        // 第二层参数
+        var args2 = Array.prototype.slice.call(arguments)
+        // 判断是 bind 还是 new，this -> new; context -> bind
+        // *这个 this 是内部函数的
+        return self.apply(
+          this instanceof context ? this : context,
+          args1.concat(args2)
+        )
+      }
+      // *这有问题，如果修改 bind_fn 原型上属性，也会导致修改了外层 this
+      // bind_fn.prototype = this.prototype
+      // *这里类似 Object.create()
+      var newObj = function () {}
+      newObj.prototype = this.prototype
+      bind_fn.prototype = new newObj()
+
+      return bind_fn
+    }
+
     var value = 1
     var obj = {
       value: 2
@@ -71,14 +103,16 @@
       }
     }
 
+    var t_bind = test.bind2(obj, 'a')
+    console.log(t_bind('b'))
 
-    test()
-    test.call(obj)
-    // test.call2(obj, 1, 'abc')
-    console.log(test.call2())
-    console.log(test.call2(obj, 'parma1', 'param2'))
-    console.log(test.apply2(obj, ['a', 'b']))
-    eval('test(' + [] + ')')
+    // test()
+    // test.call(obj)
+    // // test.call2(obj, 1, 'abc')
+    // console.log(test.call2())
+    // console.log(test.call2(obj, 'parma1', 'param2'))
+    // console.log(test.apply2(obj, ['a', 'b']))
+    // eval('test(' + [] + ')')
   </script>
 </body>
 
